RESOLVED FIXED285514
Cleanup flex container caches when child box is no longer a flex item
https://bugs.webkit.org/show_bug.cgi?id=285514
Summary Cleanup flex container caches when child box is no longer a flex item
alan
Reported 2025-01-07 05:12:21 PST
Attachments
[fast-cq]Patch (3.08 KB, patch)
2025-01-07 05:18 PST, alan
no flags
alan
Comment 1 2025-01-07 05:18:01 PST
Created attachment 473823 [details] [fast-cq]Patch
EWS
Comment 2 2025-01-07 07:27:58 PST
Committed 288525@main (8e61c762c241): <https://commits.webkit.org/288525@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473823 [details].
Note You need to log in before you can comment on or make changes to this bug.