Cleanup flex container caches when child box is no longer a flex item https://bugs.webkit.org/show_bug.cgi?id=285514 <rdar://142443738>

Reviewed by Antti Koivisto.

When an inflow flex container child (flex item) goes out-of-flow, it is no longer a flex item
and it does not participate in flex layout anymore. Let's remove it from flex layout caches.

* LayoutTests/fast/flexbox/child-becomes-out-of-flow-crash-expected.txt: Added.
* LayoutTests/fast/flexbox/child-becomes-out-of-flow-crash.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::styleWillChange):

Canonical link: https://commits.webkit.org/288525@main